# trace-cli

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  install.sh
.github/workflows/: release.yml
e2e/: .env.example  Dockerfile  Dockerfile.opencode  claude-tools-e2e.sh  docker-compose.yml  opencode-e2e.sh  opencode-tools-e2e.sh  run.sh
plugins/openclaw/: HOOK.md  handler.ts
plugins/opencode/: pulse-plugin.ts
src/: config.rs  error.rs  http.rs  lib.rs  main.rs
src/commands/: connect.rs  dashboard.rs  disconnect.rs  emit.rs  init.rs  mod.rs  setup.rs  status.rs
src/hooks/: claude_code.rs  mod.rs  openclaw.rs  opencode.rs  span.rs
tests/: http_test.rs  span_test.rs
